fix lowbar flickering when hover

--- a/src/components/webdesigns/haningetk2/navbar/lowbar/lowbarpage.css
+++ b/src/components/webdesigns/haningetk2/navbar/lowbar/lowbarpage.css
@@ -1,5 +1,5 @@
 .lowbar_container {
-    border: 1px solid white;
+    /* border: 1px solid white; */
     min-height: 20vh;
     width: 100%;
 
